// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders Dashboard Not Found message when dashboard id is not valid 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    DashboardsBar
  </div>
  <div>
    Requested dashboard not found
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders EDIT dashboard 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    EditDashboard
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders Loading indicator when dashboards loaded and id is still null 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    Layer
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders Loading indicator when dashboards not loaded 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    Layer
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders NEW dashboard 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    NewDashboard
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders No Dashboards message when no dashboards and mode != NEW 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    DashboardsBar
  </div>
  <div>
    No dashboards found. Use the + button to create a new dashboard.
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders PRINT dashboard 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    PrintDashboard
  </div>
  <div>
    AlertStack
  </div>
</div>
`;

exports[`Dashboard renders PRINT_LAYOUT dashboard 1`] = `
<div>
  <div>
    CssVariables
  </div>
  <div>
    PrintLayoutDashboard
  </div>
  <div>
    AlertStack
  </div>
</div>
`;
